--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         <section id="about"> <!-- each h2 are jumplinked to go back to the top, no more needless scrolling !! -->
             <div class="picture">
                 <img id="me" src="./images/me.jpg" width="400px" alt="picture of me">
-                <button id="btn-alert" onclick="balrt()">click me !</button>
             </div> 
             <div class="text">
                 <a href="#site-header"><h2>about</h2></a>
@@ -72,14 +71,17 @@
                     <img src="./images/img_russian_doll_poster.jpg" alt= "abstract psoter of russian doll" >
                 </div>
                 <div class="portimg">
+                    <img src="./images/Artboard1.png" alt="que dulce logo.">
+                    <img src="./images/Artboard2.png" alt="meriele logos."
+                    <img src="./images/Artboard3.png" alt="new wave logos.">
+                    <img src="./images/Artboard4.png" alt="SAIT IDD program shirt idea.">
+                </div>
+                <div class="portimg">
                     <video src="./images/the_great_edit_viola_d'amore.mp4" title="the great edit viola d'amore" controls></video>
                     <video src="./images/succession_money_money_money.mp4" title="succession money money money" controls></video>
                     <video src="./images/scott_pilgrim_v_the_world.mp4"  title="scott pilgrim v the world" controls></video>
                 </div>
-                <div class="btn">
-                    <button id="btn-counter"><i class="fa fa-heart" onclick="this.style.color='#D22B2B';" style="font-size: 15px; "></i></button>
-                    <span id="txt-counter" class="odd">likes — 1</span>
-                </div>
+                
         </section>
         <section id="contacts">
             <a href="#site-header"><h2>get in touch</h2></a>
