--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
                 <div class="portimg">
                     <img src="./images/Artboard1.png" alt="que dulce logo.">
                     <img src="./images/Artboard2.png" alt="meriele logos.">
+                </div>
+                <div class="portimg">
                     <img src="./images/Artboard3.png" alt="new wave logos.">
                     <img src="./images/Artboard4.png" alt="SAIT IDD program shirt idea.">
                 </div>
